:toc: macro
:toclevels: 1

= Change Log

A high level summary of noteworthy changes in each version.

NOTE:: Dependency version bumps are not listed here.

// git log --pretty="* %s" 0.3.0.2..HEAD

// only show TOC if this is the root document (not in the README)
ifndef::github_name[]
toc::[]
endif::[]
== 0.5.2.8

=== Fixes
* fix: Fix equality and hash code for ShardKey with array key (#638), resolves (#579)
* fix: Fix target loading computation for inflight records (#662)
* fix: Fix synchronisation logic for transactional producer commit affecting non-transactional usage (#665), resolves (#637)

== 0.5.2.7

=== Fixes

* fix: Return cached pausedPartitionSet (#620), resolves (#618)
* fix: Parallel consumer stops processing data sometimes (#623), fixes (#606)
* fix: Add synchronization to ensure proper intializaiton and closing of PCMetrics singleton (#627), fixes (#617)
* fix: Readme - metrics example correction (#614)
* fix: Remove micrometer-atlas dependency (#628), fixes (#625)

=== Improvements

* Refactored metrics implementation to not use singleton - improves meter separation, allows correct metrics subsystem operation when multiple parallel consumer instances are running in same java process (#630), fixes (#617) improves on (#627)

== 0.5.2.6
=== Improvements

* feature: Micrometer metrics (#594)
* feature: Adds an option to pass an invalid offset metadata error policy (#537), improves (#326)
* feature: Lazy intialization of workerThreadPool (#531)

=== Fixes

* fix: Don't drain mode shutdown kills inflight threads (#559)
* fix: Drain mode shutdown doesn't pause consumption correctly (#552)
* fix: RunLength offset decoding returns 0 base offset after no-progress commit - related to (#546)
* fix: Transactional PConsumer stuck while rebalancing - related to (#541)

=== Dependencies

* PL-211: Update dependencies from dependabot, Add mvnw, use mvnw in jenkins (#583)
* PL-211: Update dependencies from dependabot (#589)

== 0.5.2.5

=== Fixes
