@@ -1517,9 +1517,11 @@ endif::[]
 == 0.5.2.8
 
 === Fixes
+
 * fix: Fix equality and hash code for ShardKey with array key (#638), resolves (#579)
 * fix: Fix target loading computation for inflight records (#662)
 * fix: Fix synchronisation logic for transactional producer commit affecting non-transactional usage (#665), resolves (#637)
+* fix: Fix for race condition in partition state clean/dirty tracking (#666), resolves (#664)
 
 == 0.5.2.7
 
