@@ -1,7 +1,7 @@
 package io.confluent.parallelconsumer.state;
 
 /*-
- * Copyright (C) 2020-2022 Confluent, Inc.
+ * Copyright (C) 2020-2023 Confluent, Inc.
  */
 
 import com.google.common.truth.Truth;
@@ -16,10 +16,7 @@ import org.junit.jupiter.api.Test;
 import pl.tlinkowski.unij.api.UniLists;
 import pl.tlinkowski.unij.api.UniSets;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
-import java.util.TreeSet;
+import java.util.*;
 import java.util.concurrent.ConcurrentSkipListMap;
 import java.util.stream.Collectors;
 
@@ -177,5 +174,30 @@ class PartitionStateCommittedOffsetTest {
         assertThat(state).getAllIncompleteOffsets().containsExactlyElementsIn(expectedTruncatedIncompletes);
     }
 
+    @Test
+    void workCompletedDuringAsyncCommitShouldKeepStateAsDirty(){
+        final long completedOffset = 1L;
+        final long incompleteOffset = 2L;
+
+        final HighestOffsetAndIncompletes offsetData = new HighestOffsetAndIncompletes(Optional.of(incompleteOffset),
+                new TreeSet<>(Arrays.asList(completedOffset, incompleteOffset)));
+        PartitionState<String, String> state = new PartitionState<>(0, mu.getModule(), tp, offsetData);
+        state.onSuccess(completedOffset);
+
+        // fetch committable/completed offset
+        OffsetAndMetadata offsetAndMetadata = state.getCommitDataIfDirty().get();
+
+        assertThat(offsetAndMetadata).getOffset().isEqualTo(completedOffset+1);
+
+        // mark incomplete work as complete
+        state.onSuccess(incompleteOffset);
+        assertThat(state).isDirty();
+
+        //mark fetched offset as committed
+        state.onOffsetCommitSuccess(offsetAndMetadata);
+
+        // partition should stay dirty, since the newly completed work could be committed now.
+        assertThat(state).isDirty();
+    }
 
 }
